@@ -121,6 +121,8 @@ if ( sqgetGlobalVar('mailtodata', $mailtodata, SQ_GET) ) {
 
 /* Location (For HTTP 1.1 Header("Location: ...") redirects) */
 $location = get_location();
+/* Identities (fetch only once) */
+$idents = get_identities();
 
 /* --------------------- Specific Functions ------------------------------ */
 
@@ -139,8 +141,8 @@ function replyAllString($header) {
      * TO list) only if $include_self_reply_all is turned off
      */
     if (!$include_self_reply_all) {
-        $ids = get_identities();
-        foreach($ids as $id) {
+        global $idents;
+        foreach($idents as $id) {
             $excl_ar[strtolower(trim($id['email_address']))] = '';
         }
     }
@@ -546,15 +548,8 @@ if ($send) {
     showInputForm($session);
 }
 elseif (isset($sigappend)) {
-    $idents = getPref($data_dir, $username, 'identities', 0);
-    if ($idents > 1) {
-       if ($identity == 'default') {
-          $no = 'g';
-       } else {
-          $no = $identity;
-       }
-       $signature = getSig($data_dir, $username, $no);
-    }
+    $signature = $idents[$identity]['signature'];
+    
     $body .= "\n\n".($prefix_sig==true? "-- \n":'').$signature;
     if ($compose_new_win == '1') {
         compose_Header($color, $mailbox);
@@ -638,7 +633,7 @@ exit();
 
 /* This function is used when not sending or adding attachments */
 function newMail ($mailbox='', $passed_id='', $passed_ent_id='', $action='', $session='') {
-    global $editor_size, $default_use_priority, $body,
+    global $editor_size, $default_use_priority, $body, $idents,
         $use_signature, $composesession, $data_dir, $username,
         $username, $key, $imapServerAddress, $imapPort, $compose_messages,
         $composeMessage, $body_quote;
@@ -733,7 +728,6 @@ function newMail ($mailbox='', $passed_id='', $passed_ent_id='', $action='', $se
         }
 
         $identity = '';
-        $idents = getPref($data_dir, $username, 'identities');
         $from_o = $orig_header->from;
         if (is_array($from_o)) {
             if (isset($from_o[0])) {
@@ -747,16 +741,11 @@ function newMail ($mailbox='', $passed_id='', $passed_ent_id='', $action='', $se
         }
 
         $identities = array();
-        if (!empty($idents) && $idents > 1) {
-            $identities[]  = '"'. getPref($data_dir, $username, 'full_name').
-                '" <'.getPref($data_dir, $username, 'email_address').'>';
-            for ($i = 1; $i < $idents; $i++) {
-                $enc_from_name = '"'.
-                    getPref($data_dir, $username, 'full_name' . $i) .
-                    '" <' .
-                    getPref($data_dir, $username, 'email_address' . $i) . '>';
-                if ($enc_from_name == $orig_from && $i) {
-                    $identity = $i;
+        if (count($idents) > 1) {
+            foreach($idents as $nr=>$data) {
+                $enc_from_name = '"'.$data['full_name'].'" <'. $data['email_address'].'>';
+                if($enc_from_name == $orig_from) {
+                    $identity = $nr;
                     break;
                 }
                 $identities[] = $enc_from_name;
@@ -775,6 +764,7 @@ function newMail ($mailbox='', $passed_id='', $passed_ent_id='', $action='', $se
                 $send_to = decodeHeader($orig_header->getAddr_s('to'),false,false,true);
                 $send_to_cc = decodeHeader($orig_header->getAddr_s('cc'),false,false,true);
                 $send_to_bcc = decodeHeader($orig_header->getAddr_s('bcc'),false,false,true);
+                // FIXME: ident support?
                 $subject = decodeHeader($orig_header->subject,false,false,true);
                 /* remember the references and in-reply-to headers in case of an reply */
                 $composeMessage->rfc822_header->more_headers['References'] = $orig_header->references;
@@ -981,7 +971,7 @@ function showInputForm ($session, $values=false) {
         $editor_size, $editor_height, $attachments, $subject, $newmail,
         $use_javascript_addr_book, $send_to_bcc, $passed_id, $mailbox,
         $from_htmladdr_search, $location_of_buttons, $attachment_dir,
-        $username, $data_dir, $identity, $draft_id, $delete_draft,
+        $username, $data_dir, $identity, $idents, $draft_id, $delete_draft,
         $mailprio, $default_use_mdn, $mdn_user_support, $compose_new_win,
         $saved_draft, $mail_sent, $sig_first, $edit_as_new, $action,
         $username, $compose_messages, $composesession, $default_charset,
@@ -1057,44 +1047,24 @@ function showInputForm ($session, $values=false) {
     if ($location_of_buttons == 'top') {
         showComposeButtonRow();
     }
-
+    
     /* display select list for identities */
-    $idents = getPref($data_dir, $username, 'identities', 0);
-    if ($idents > 1) {
-        $fn = getPref($data_dir, $username, 'full_name');
-        $em = getPref($data_dir, $username, 'email_address');
+    if (count($idents) > 1) {
         echo '   <tr>' . "\n" .
             html_tag( 'td', '', 'right', $color[4], 'width="10%"' ) .
             _("From:") . '</td>' . "\n" .
             html_tag( 'td', '', 'left', $color[4], 'width="90%"' ) .
-            '         <select name="identity">' . "\n" .
-            '         <option value="default">' .
-            htmlspecialchars($fn);
-        if ($em != '') {
-            if ($fn != '') {
-                echo htmlspecialchars(' <' . $em . '>') . "\n";
-            } else {
-                echo htmlspecialchars($em) . "\n";
-            }
-        }
-        echo '</option>';
-        for ($i = 1; $i < $idents; $i ++) {
-            $fn = getPref($data_dir, $username, 'full_name' . $i);
-            $em = getPref($data_dir, $username, 'email_address' . $i);
+            '         <select name="identity">' . "\n";
 
-            echo '<option value="' . $i . '"';
-            if (isset($identity) && $identity == $i) {
+        foreach($idents as $nr => $data) {
+            echo '<option value="' . $nr . '"';
+            if (isset($identity) && $identity == $nr) {
                 echo ' selected="selected"';
             }
-            echo '>' . htmlspecialchars($fn);
-            if ($em != '') {
-                if ($fn != '') {
-                    echo htmlspecialchars(' <' . $em . '>') . "\n";
-                } else {
-                    echo htmlspecialchars($em) . "\n";
-                }
-            }
-            echo '</option>';
+            echo '>' . htmlspecialchars(
+                    $data['full_name'] . ' <' .
+                    $data['email_address'] . '>') .
+                "</option>\n";
         }
 
         echo '</select>' . "\n" .
@@ -1150,14 +1120,7 @@ function showInputForm ($session, $values=false) {
     }
 
     if ($use_signature == true && $newmail == true && !isset($from_htmladdr_search)) {
-        if ($idents > 1) {
-            if ($identity == 'default') {
-                $no = 'g';
-            } else {
-                $no = $identity;
-            }
-            $signature = getSig($data_dir, $username, $no);
-        }
+        $signature = $idents[$identity]['signature'];
 
         if ($sig_first == '1') {
             if ($default_charset == 'iso-2022-jp') {
@@ -1446,7 +1409,7 @@ function getByteSize($ini_size) {
  */
 function deliverMessage($composeMessage, $draft=false) {
     global $send_to, $send_to_cc, $send_to_bcc, $mailprio, $subject, $body,
-        $username, $popuser, $usernamedata, $identity, $data_dir,
+        $username, $popuser, $usernamedata, $identity, $idents, $data_dir,
         $request_mdn, $request_dr, $default_charset, $color, $useSendmail,
         $domain, $action, $default_move_to_sent, $move_to_sent;
     global $imapServerAddress, $imapPort, $sent_folder, $key;
@@ -1479,15 +1442,9 @@ function deliverMessage($composeMessage, $draft=false) {
         $popuser = $username;
     }
     $reply_to = '';
-    if (isset($identity) && $identity != 'default') {
-        $from_mail = getPref($data_dir, $username,'email_address' . $identity);
-        $full_name = getPref($data_dir, $username,'full_name' . $identity);
-        $reply_to = getPref($data_dir, $username,'reply_to' . $identity);
-    } else {
-        $from_mail = getPref($data_dir, $username, 'email_address');
-        $full_name = getPref($data_dir, $username, 'full_name');
-        $reply_to = getPref($data_dir, $username,'reply_to');
-    }
+    $from_mail = $idents[$identity]['email_address'];
+    $full_name = $idents[$identity]['full_name'];
+    $reply_to  = $idents[$identity]['reply_to'];
     if (!$from_mail) {
         $from_mail = "$popuser@$domain";
     }
